MOF-152 - done, fixed buttons on iOS

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,4 +1,6 @@
 .button {
+  margin: 0;
+  padding: 0;
   border: 0;
   border-radius: 2px;
   cursor: pointer;
